# mcp-fred

./: .gitignore  README.md  publish.sh  pyproject.toml  setup_github.py
src/mcp_fred/: __init__.py  server.py
